Uppercase and mathc styling

--- a/src/Nav/Nav.scss
+++ b/src/Nav/Nav.scss
@@ -9,6 +9,7 @@ nav {
     border-radius: 6px;
     border-color:#98012e;
     font-size: 12px;
+    color: #fff;
     min-height: 25px;
     padding: 5px;
     transition: border .2s, background .2s;
