--- a/src/Nav/Nav.scss
+++ b/src/Nav/Nav.scss
@@ -1,16 +1,19 @@
 nav {
   background-color: #282828;
   padding: 12px 20px;
-  width:100%;
+  height: 10%;
   display:flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
+  img{
+    width: 100px;
+  }
   button {
     border-radius: 6px;
     border-color:#98012e;
     font-size: 12px;
     color: #fff;
-    min-height: 25px;
+    height: 25px;
     padding: 5px;
     transition: border .2s, background .2s;
     &.nav_button-login {
