--- a/src/Nav/Nav.scss
+++ b/src/Nav/Nav.scss
@@ -1,10 +1,11 @@
 nav {
   background-color: #282828;
-  padding: 12px 20px;
+  padding: 0 20px;
   height: 10%;
   display:flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   img{
     width: 180px;
   }
@@ -13,8 +14,8 @@ nav {
     border-color:#98012e;
     font-size: 12px;
     color: #fff;
-    height: 25px;
     padding: 5px;
+    width:65px;
     transition: border .2s, background .2s;
     &.nav_button-login {
       background-color: #98012e;
